# blog-cover-generator

./: .dockerignore  Dockerfile  admin.py  app.py  config.py  deploy.sh  models.py  pyproject.toml  routes.py  verify_backend.py
instance/: blog_cover_generator.db
static/css/: admin.css  auth.css  dashboard.css  style.css
static/js/: admin.js  app.js  dashboard.js  landing.js
templates/: admin_dashboard.html  app.html  dashboard.html  index.html  landing.html  login.html  signup.html
utils/: image_generator.py  image_processor.py  storage.py
